src/objects/ERM_EServices_Policy_User__c.object
<CustomObject>
    <description>This object is used to track the list of users added to the policy for EService request in ERM.</description>
    <fields>
        <fullName>Bill_groups__c</fullName>
        <label>Bill groups</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>All</fullName>
                </value>
                <value>
                    <fullName>List</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Communication_Center_Only__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Communication Center Only captured for EServices</description>
        <inlineHelpText>Tools for Wellness Only</inlineHelpText>
        <label>Communication Center Only</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ESP_Enrollment__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ESP Enrollment</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <description>Email of the user added to the policy for EService request.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>User Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>First_Name__c</fullName>
        <description>First name of the user added to the policy for EService request.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>First Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Name__c</fullName>
        <description>Last name of the user added to the policy for EService request.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Last Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>List_groups_here__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Separate group number with comma</inlineHelpText>
        <label>List groups here</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Permissions__c</fullName>
        <label>Permissions</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <controllingField>Platform__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Eligibility Update</fullName>
                </value>
                <value>
                    <fullName>Eligibility Inquiry</fullName>
                </value>
                <value>
                    <fullName>eServices Electronic Eligibility (e3)</fullName>
                </value>
                <value>
                    <fullName>Claim View (ASO Only)</fullName>
                </value>
                <value>
                    <fullName>Bill View</fullName>
                </value>
                <value>
                    <fullName>Bill Pay</fullName>
                </value>
                <value>
                    <fullName>Bill Pay - OBPP Only</fullName>
                </value>
                <value>
                    <fullName>Reporting</fullName>
                </value>
                <value>
                    <fullName>Banking</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Phone_Number__c</fullName>
        <description>Phone Number of the user added to the policy for EService request.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>User Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Platform__c</fullName>
        <label>Platform</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>CES</fullName>
                </value>
                <value>
                    <fullName>COSMOS</fullName>
                </value>
                <value>
                    <fullName>GPS</fullName>
                </value>
                <value>
                    <fullName>OBS</fullName>
                </value>
                <value>
                    <fullName>PRIME</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Policy__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Policy related to the user</description>
        <label>Policy</label>
        <referenceTo>Enrolees__c</referenceTo>
        <relationshipLabel>Users</relationshipLabel>
        <relationshipName>EServices_Policy_Users</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Re_enter_User_Email__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Re-Enter User Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Request_Details_Platform__c</fullName>
        <description>The Platform of the Request Details captured on the user added.</description>
        <label>Request Details Platform</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>PRIME</fullName>
                </value>
                <value>
                    <fullName>UNET</fullName>
                </value>
                <value>
                    <fullName>NICE</fullName>
                </value>
                <value>
                    <fullName>EServices/Broker</fullName>
                </value>
                <value>
                    <fullName>EServices/Employer</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Request_Type__c</fullName>
        <label>Request Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Add a New User Profile Under Existing Broker Agency</fullName>
                </value>
                <value>
                    <fullName>Add Multiple Policies to an Existing Broker Agency</fullName>
                </value>
                <value>
                    <fullName>Add New Policy to an Existing Broker Agency Profile</fullName>
                </value>
                <value>
                    <fullName>Add/Update Multiple Policies to an Existing User Profile</fullName>
                </value>
                <value>
                    <fullName>Change Existing Broker Agency Reporting</fullName>
                </value>
                <value>
                    <fullName>Change Permissions to an Existing Policy</fullName>
                </value>
                <value>
                    <fullName>Create new Broker Agency Profile</fullName>
                </value>
                <value>
                    <fullName>Inactivate an Existing Broker Agency Profile</fullName>
                </value>
                <value>
                    <fullName>Inactivate Multiple Policies Under Existing Broker Agency</fullName>
                </value>
                <value>
                    <fullName>Request Broker Client reports</fullName>
                </value>
                <value>
                    <fullName>Update User Access to Existing Policies</fullName>
                </value>
                <value>
                    <fullName>Update/Inactivate/Reactivate an Existing User Profile</fullName>
                </value>
                <value>
                    <fullName>Add a new user Profile under Existing Employer</fullName>
                </value>
                <value>
                    <fullName>Add New policy to an Existing Employer Profile/Create New GPS Employer Profile</fullName>
                    <label>Add New policy to an Existing Employer Profile / Create New GPS Employer Profile</label>
                </value>
                <value>
                    <fullName>Change Existing Employer Reporting or Update Paper Invoice</fullName>
                </value>
                <value>
                    <fullName>Change Permission to an Existing Employer Policy</fullName>
                </value>
                <value>
                    <fullName>Request Employer Client Reports</fullName>
                </value>
                <value>
                    <fullName>Inactivate Existing Policy Under Employer</fullName>
                </value>
                <value>
                    <fullName>Inactive Existing Policy Under Employer</fullName>
                    <isActive>false</isActive>
                    <label>Inactive Existing Policy Under Employer</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>User_ID__c</fullName>
        <description>User ID of the user added to the policy for EService request.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>User information used just to verify policy.
To update user permissions go to Update User Access to Existing Policy</inlineHelpText>
        <label>User ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Verify_the_selected_permissions__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>All users have same permissions as policy.</inlineHelpText>
        <label>Verify the selected permissions</label>
        <type>Checkbox</type>
    </fields>
    <label>EServices Policy User</label>
    <nameField>
        <displayFormat>U-{0000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>EServices Policy Users</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>